--- a/css/blocks/advantages.scss
+++ b/css/blocks/advantages.scss
@@ -3,12 +3,20 @@
     width: 100%;
     justify-content: space-between;
     background: url("../img/bg/advantages-bg-three-dots.png") no-repeat 30.5% 20%, url("../img/bg/advantages-bg-three-dots.png") no-repeat 69.5% 20%;
+    @include tablets {
+        flex-direction: column;
+        background: none;
+    }
+
 }
 
 .advantages__snippet {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include tablets {
+        // margin-bottom: 4.7%;
+    }
 }
 
 .advantages__icon-holder {
@@ -33,6 +41,9 @@
 }
 
 .advantages__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     h3{   
         font-size: rem(27px);
         font-weight: bold;
@@ -43,7 +54,11 @@
 
     p {
         @include grey-text;
-        width: rem(285px);
-        text-align: center;
+        // width: 30%;
+        max-width: rem(285px);
+        text-align: center; 
+        @include tablets {
+            max-width: 60%;
+        }
     }
 }
