--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -8,6 +8,18 @@
     }
 }
 
+.team__inner {
+    height: 100%;
+    padding-top: 8%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @include tablets {
+        // padding-top: 0;
+        justify-content: center;
+    }
+}
+
 .team__title {
     text-align: center;
     margin-bottom: rem(50px);
