--- a/css/blocks/social.scss
+++ b/css/blocks/social.scss
@@ -1,11 +1,19 @@
+.social {
+    width: rem(145px);
+    display: flex;
+    justify-content: space-between;
+    @include tablets {
+        width: rem(175px);
+    }
+}
+
 .social__item {
-    margin-left: rem(20px);
     display: inline-block;
+    width: 15%;
 }
 
 .social__icon {
-    width: rem(20px);
-    height: rem(20px);
+    width: 100%;
     fill: $social-grey;    
     &:hover {
         fill: $black;
