--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,8 @@
 //break-points
 $tablets: 768px;
 $phones: 480px;
+$tablets-font-size: 15px;
+$phones-font-size: 12px;
 
 //font-weights
 $light: 300;
